tests/bad/basic/function_too_little_params.spl
int sum(int a, int b)
{
    return a + b;
}

int main()
{
    printInt(sum(1));
    return 0;
}
